--- a/daftar.html
+++ b/daftar.html
@@ -45,38 +45,40 @@
                 </div>
                 <div class="col-lg-6 mt-3 mb-5">
                     <div class="container">
-                        <h1 class="mb-5 text-center">Daftar</h1>
+                        <form action="">
+                            <h1 class="mb-5 text-center">Daftar</h1>
 
-                        <div class="mb-3 row">
-                            <label class="col-sm-4">Nama Lengkap</label>
-                            <div class="col-sm-8">
-                                <input type="text" class="form-control" name="nama">
+                            <div class="mb-3 row">
+                                <label class="col-sm-4">Nama Lengkap</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control" name="nama">
+                                </div>
                             </div>
-                        </div>
-                        <div class="mb-3 row">
-                            <label class="col-sm-4">Email</label>
-                            <div class="col-sm-8">
-                                <input type="email" class="form-control" name="email">
+                            <div class="mb-3 row">
+                                <label class="col-sm-4">Email</label>
+                                <div class="col-sm-8">
+                                    <input type="email" class="form-control" name="email">
+                                </div>
                             </div>
-                        </div>
-                        <div class="mb-3 row">
-                            <label class="col-sm-4">Kata sandi</label>
-                            <div class="col-sm-8">
-                                <input type="password" class="form-control" name="password">
+                            <div class="mb-3 row">
+                                <label class="col-sm-4">Kata sandi</label>
+                                <div class="col-sm-8">
+                                    <input type="password" class="form-control" name="password">
+                                </div>
                             </div>
-                        </div>
-                        <div class="text-center mt-3">
-                            <a href="daftar.html" class="btn btn-primary shadow mt-3">Daftar</a>
-                        </div>
+                            <div class="text-center mt-3">
+                                <button type="submit" class="btn btn-primary shadow mt-3">Daftar</button>
+                            </div>
 
-                        <p class="mt-5 text-center">Sudah punya akun? Silahkan <a href="masuk.html"><b>Masuk</b></a></p>
+                            <p class="mt-5 text-center">Sudah punya akun? Silahkan <a href="masuk.html"><b>Masuk</b></a></p>
 
-                        <p class="text-center">-- Atau daftar dengan --</p>
+                            <p class="text-center">-- Atau daftar dengan --</p>
 
-                        <div class="text-center">
-                            <a href=""><img src="assets/img/icons8-google.svg" alt="google" width="40px"></a>
-                            <a href=""><img src="assets/img/icons8-facebook-logo.svg" alt="facebook"></a>
-                        </div>
+                            <div class="text-center">
+                                <a href=""><img src="assets/img/icons8-google.svg" alt="google" width="40px"></a>
+                                <a href=""><img src="assets/img/icons8-facebook-logo.svg" alt="facebook"></a>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
