--- a/lupa-kata-sandi.html
+++ b/lupa-kata-sandi.html
@@ -40,40 +40,22 @@
             <div class="row">
                 <div class="col-lg-6 mt-3">
                     <div class="text-center">
-                        <img src="assets/img/undraw_authentication_fsn5.svg" class="illustration" alt="illustration">
+                        <img src="assets/img/undraw_Forgot_password_re_hxwm.svg" class="illustration" alt="illustration">
                     </div>
                 </div>
                 <div class="col-lg-6 mt-3 mb-5">
                     <div class="container">
                         <form action="">
-                            <h1 class="mb-5 text-center">Masuk</h1>
+                            <h1 class="mb-5 text-center">Lupa Kata Sandi</h1>
 
                             <div class="mb-3 row">
-                                <label class="col-sm-4">Email</label>
+                                <label class="col-sm-4">Konfirmasi Email</label>
                                 <div class="col-sm-8">
                                     <input type="email" class="form-control" name="email">
                                 </div>
                             </div>
-                            <div class="mb-3 row">
-                                <label class="col-sm-4">Kata Sandi</label>
-                                <div class="col-sm-8">
-                                    <input type="password" class="form-control" name="password">
-                                </div>
-                            </div>
-                            <div class="forgot-password text-right">
-                                <a href="lupa-kata-sandi.html">Lupa kata sandi?</a>
-                            </div>
                             <div class="text-center mt-3">
-                                <button type="submit" class="btn btn-primary shadow">Masuk</button>
-                            </div>
-
-                            <p class="mt-5 text-center">Belum punya akun? Buruan <a href="daftar.html"><b>Daftar</b></a></p>
-
-                            <p class="text-center">-- Atau masuk dengan --</p>
-
-                            <div class="text-center">
-                                <a href=""><img src="assets/img/icons8-google.svg" alt="google" width="40px"></a>
-                                <a href=""><img src="assets/img/icons8-facebook-logo.svg" alt="facebook"></a>
+                                <button type="submit" class="btn btn-primary shadow mt-3">Konfirmasi</button>
                             </div>
                         </form>
                     </div>
