--- a/lupa-kata-sandi.html
+++ b/lupa-kata-sandi.html
@@ -57,6 +57,7 @@
                             <div class="text-center mt-3">
                                 <button type="submit" class="btn btn-primary shadow mt-3">Konfirmasi</button>
                             </div>
+                            <p class="mt-5 text-center">Kembali ke halaman <a href="masuk.html"><b>Masuk</b></a></p>
                         </form>
                     </div>
                 </div>
