--- a/daftar.html
+++ b/daftar.html
@@ -21,7 +21,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="">English Academy</a>
+            <a class="navbar-brand" href="index.html">English Academy</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -134,6 +134,8 @@
     <script src="assets/bootstrap-5/js/bootstrap.bundle.min.js "></script>
     <!-- Fontawesome -->
     <script defer src="assets/fontawesome-5/js/all.js "></script>
+    <!-- Main JS -->
+    <script src="assets/js/main.js "></script>
 
 </body>
 
